# ask-insects

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  NOTICE  README.md  THIRD_PARTY_DATA.md  pyproject.toml  setup.py
.codex/: config.toml
askinsects/: __init__.py  agent_setup.py  answer.py  builder.py  cli.py  context_package.py  gaps.py  hosted.py  incremental_metadata.py  index.py  ingest_runner.py  planner.py  provenance.py  reality_eval.py  records.py  repellency.py  reviewed_science.py  server.py  species.py  voxels.py
config/: aedes-source-plane-benchmark.json  aedes-vectorbyte-abundance-datasets.txt  anopheles-intelligence-coverage.json  ask-monarch-context-package.json  insect-evidence-package.json  insect-intelligence-programs.json  mosquito-intelligence-coverage.json  reviewed-repellent-evidence.json  reviewed-scientific-evidence.json  source-map.yaml  swd-source-plane-benchmark.json
docs/: aedes-aegypti-literature-2020-source.md  aedes-source-plane-benchmark.md  elicit-discovery-source.md  production-path-evaluation.md  querying-ask-insects.md  source-adapter-runner-exceptions.md  source-lanes.md
evals/: ask_insects_production_path_v1.json  ask_insects_reality_eval_holdout_receipt_v1.json  ask_insects_reality_eval_public_v1.json  ask_insects_reality_eval_public_v2.json  repellency_comparison_v1.json
scripts/: __init__.py  ask-insects-launcher  build_literature_facets.py  build_source_index.py  deploy_gce_app.sh  deploy_gce_vm.sh  enrich_literature_index.py  eval_production_path.py  eval_reality.py  eval_repellency_comparison.py  gen_parity_snapshot.py  ingest_aedes_aegypti_elicit_discovery.py  ingest_aedes_crossref_literature_audit.py  ingest_aedes_deep_sources.py  ingest_aedes_olfaction_literature.py  ingest_aedes_primary_behavior_evidence.py  ingest_anopheles_gbif.py  ingest_anopheles_literature.py  ingest_anopheles_ncbi_assemblies.py  ingest_anopheles_ncbi_biosamples.py  ingest_anopheles_ncbi_genome_features.py  ingest_anopheles_ncbi_sra.py  ingest_anopheles_pathogen_taxonomy.py  ingest_anopheles_uniprot.py  (+90 more)
tests/: test_cli.py  (+197 more)
(+327 files in other folders)
