[project]
name = "askinsects"
version = "0.1.0"
description = "CLI-first local source plane for mosquito evidence."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.16",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
ask-insects = "askinsects.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
