[project]
name = "askinsects"
version = "0.1.0"
description = "CLI-first local source plane for mosquito evidence."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.16",
  "Pillow>=10",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
ask-insects = "askinsects.cli:main"

[project.urls]
Homepage = "https://openinsects.org"
Source = "https://github.com/manintheandes/ask-insects"

[tool.pytest.ini_options]
testpaths = ["tests"]
