[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "askinsects"
version = "0.1.0"
description = "CLI-first source plane for public, evidence-backed insect intelligence."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.16",
  "Pillow>=10",
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[dependency-groups]
# Test-only: some source tests build .xlsx fixtures with openpyxl. Runtime xlsx
# parsing uses the stdlib (zipfile/ElementTree), so this is not a runtime dep.
dev = [
  "openpyxl>=3.1",
  "pytest>=8.0",
]

[project.scripts]
ask-insects = "askinsects.cli:main"

[project.urls]
Homepage = "https://openinsects.org"
Source = "https://github.com/manintheandes/ask-insects"

[tool.setuptools.packages.find]
include = ["askinsects*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
